Bug 145508 - kf5: Assert hit when starting Impress presentation after e4abf879f4a24258bcc560eb58ca78b147768d46
Summary: kf5: Assert hit when starting Impress presentation after e4abf879f4a24258bcc5...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
7.3.0.0 alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.3.0
Keywords: bibisected, bisected, haveBacktrace, regression
: 145557 (view as bug list)
Depends on:
Blocks: KDE, KF5 Crash-Assert
  Show dependency treegraph
 
Reported: 2021-11-02 09:30 UTC by Michael Weghorn
Modified: 2021-11-11 06:59 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (9.19 KB, text/plain)
2021-11-02 20:01 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2021-11-02 09:30:37 UTC
Steps to reproduce:

1) start Impress with the kf5 VCL plugin
2) press F5 to start slide show (full screen mode)

Result: Assert is hit with current master debug build

> qt.qpa.xcb: QXcbConnection: XCB error: 3 (BadWindow), sequence: 1711, resource id: 18874751, major code: 40 (TranslateCoords), minor code: 0
> soffice.bin: /home/michi/development/git/libreoffice/vcl/qt5/QtFrame.cxx:764: virtual void QtFrame::ShowFullScreen(bool, sal_Int32): Assertion `m_pTopLevel' failed.


Version: 7.3.0.0.alpha1+ / LibreOffice Community
Build ID: ab32d1c01814d576b0b82c99e1849a8a71b12188
CPU threads: 12; OS: Linux 5.14; UI render: default; VCL: kf5 (cairo+xcb)
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded
Comment 1 Michael Weghorn 2021-11-02 09:32:10 UTC
No longer runs into assert with a local revert of

commit e4abf879f4a24258bcc560eb58ca78b147768d46
Author: Jan-Marek Glogowski <glogow@fbihome.de>
Date:   Sun Oct 31 13:41:20 2021 +0100

    tdf#145363 Qt popups actually are windows
    
    An other patch in the whole Qt popup handling saga. At this point
    it mainly exists as a prerequisite for the real tdf#145363 fix. I
    just wanted to keep it separate. Maybe it also helps Qt Wayland.
    
    Change-Id: Ib76e9919398bdd5fa7d6239ddb126859f0c0edbf
    Reviewed-on: https://gerrit.libreoffice.org/c/core/+/124525
    Tested-by: Jenkins
    Reviewed-by: Jan-Marek Glogowski <glogow@fbihome.de>

Adding CC: to Jan-Marek Glogowski
Comment 2 Julien Nabet 2021-11-02 20:01:03 UTC
Created attachment 176083 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today + kf5 rendering, I could reproduce this.
Comment 3 Michael Weghorn 2021-11-05 15:07:32 UTC
*** Bug 145557 has been marked as a duplicate of this bug. ***
Comment 4 Jan-Marek Glogowski 2021-11-10 00:48:48 UTC
I thought adding the "&& (nStyle != SalFrameStyleFlags::NONE))" for windows starting with a GtkBox, like vcl/uiconfig/ui/combobox.ui, making them a non-window, but a Widget would be a sensible thing. Turns out the presentation window i just created with WB_HIDE | WB_CLIPCHILDREN, which results in SalFrameStyleFlags::NONE flags...

Fix is to remove the additional condition, making combobox.ui a real window again, not a Qt::Widget, which feels wrong, but might actually be correct.
Comment 5 Commit Notification 2021-11-10 14:36:26 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/373b27e7038cf4010a04163861ebec48984b4353

tdf#145508 Qt NONE-frames should still be windows

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Michael Weghorn 2021-11-11 06:59:36 UTC
Thanks!

Fix verified with

Version: 7.3.0.0.alpha1+ / LibreOffice Community
Build ID: 373b27e7038cf4010a04163861ebec48984b4353
CPU threads: 12; OS: Linux 5.14; UI render: default; VCL: kf5 (cairo+wayland)
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded

and the same version on X11 as well.