tdf#145508 Qt NONE-frames should still be windows

This drops the newly "&& (nStyle != SalFrameStyleFlags::NONE))"
introduced in the regressing commit
e4abf879f4a24258bcc560eb58ca78b147768d46 ("tdf#145363 Qt popups
actually are windows").

A GtkBox based UI snippet, like vcl/uiconfig/ui/combobox.ui, IMHO
shoulden't be represented as a Qt::Window, but a Qt::Widget. But
there is no real way to identify it, so lets keep the old, working
code.

Change-Id: Ic41ff15ab651b422ee95c906cac67e37be8d8a65
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/124958
Tested-by: Jenkins
Reviewed-by: Jan-Marek Glogowski <glogow@fbihome.de>